force-app/main/default/objects/Invoice_Line_Item__c/fields/Advance_GST_Code__c.field-meta.xml
<CustomField>
    <fullName>Advance_GST_Code__c</fullName>
    <label>Advance GST Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_Code</valueSetName>
    </valueSet>
</CustomField>