force-app/main/default/objects/Invoice_Line_Item__c/fields/Advance_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_Ref_No__c</fullName>
    <externalId>true</externalId>
    <label>Advance Ref No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>