force-app/main/default/objects/Invoice_Line_Item__c/fields/Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_Type__c</fullName>
    <formula>IF(ISBLANK(Debit_Note__c),&quot;NORMAL&quot;,&quot;ADVANCE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Type</label>
    <type>Text</type>
</CustomField>