force-app/main/default/objects/Invoice_Line_Item__c/fields/Course_Registration__c.field-meta.xml
<CustomField>
    <fullName>Course_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Registration</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>