force-app/main/default/objects/Invoice_Line_Item__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Note</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Accounting_Notes__c.Note_Type__c</field>
            <operation>equals</operation>
            <value>Debit Note</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Accounting_Notes__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>