force-app/main/default/objects/Invoice_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>(MVP 1.0) - Invoice Line item display text</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>