force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <summarizedField>Invoice_Discount__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Discount__c.Invoice_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>