force-app/main/default/objects/Invoice_Line_Item__c/fields/GST_Calculated__c.field-meta.xml
<CustomField>
    <fullName>GST_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Calculated</label>
    <type>Checkbox</type>
</CustomField>