force-app/main/default/objects/Invoice_Line_Item__c/fields/Nett_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Nett_GST_Amount__c</fullName>
    <formula>GST_Amount__c-Discount_GST_Amount__c-Utilized_Advance_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nett GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>