force-app/main/default/objects/Invoice_Line_Item__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <label>Participant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>