force-app/main/default/objects/Invoice_Line_Item__c/fields/Receipt_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reference_No__c</fullName>
    <externalId>true</externalId>
    <label>Receipt Reference No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>