force-app/main/default/objects/Invoice_Line_Item__c/fields/Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_No__c</fullName>
    <externalId>true</externalId>
    <label>Reference No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>