force-app/main/default/objects/Invoice_Line_Item__c/fields/Staff_Expense_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Staff_Expense_Cost_Centre__c</fullName>
    <description>Use to manage the Expense cost centre for the SIM Staff who register for a course</description>
    <label>Staff Expense Cost Centre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>