force-app/main/default/objects/Invoice_Line_Item__c/fields/Test_Dependent_Global__c.field-meta.xml
<CustomField>
    <fullName>Test_Dependent_Global__c</fullName>
    <label>Test Dependent Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>