force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Nett_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Nett_Amount__c</fullName>
    <formula>Nett_Amount__c + Nett_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Nett Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>