force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Cannot_create_new_Invoice_Line_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_new_Invoice_Line_Item</fullName>
    <active>true</active>
    <description>Cannot create new Invoice Line Item if the Invoice Status is not Draft</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Invoice__r.Status__c, &quot;Draft&quot;)),$Profile.Name &lt;&gt; &quot;Integration Profile&quot;)</errorConditionFormula>
    <errorMessage>Invoice has been generated</errorMessage>
</ValidationRule>