force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Cannot_edit_system_generated_LineItem.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_system_generated_LineItem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validation_Rule__c.Bypass_Validation__c), NOT(OR($Profile.Name=&apos;Integration Profile&apos;,$Profile.Name=&apos;System Administrator&apos;)),
System_Generated__c,
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>System generated Invoice Line Item cannot be edited.</errorMessage>
</ValidationRule>