force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Minimum_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Amount__c&lt;0, GST_Amount__c&lt;0, Nett_Amount__c&lt;0,  Nett_GST_Amount__c&lt;0, Discount_Amount__c&lt;0,  Discount_GST_Amount__c&lt;0)</errorConditionFormula>
    <errorMessage>Exceeds the billing amount</errorMessage>
</ValidationRule>