force-app/main/default/objects/Invoice_Line_Item__c/listViews/List_of_Invoice_Line_Item.listView-meta.xml
<ListView>
    <fullName>List_of_Invoice_Line_Item</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice__c</field>
        <operation>equals</operation>
        <value>inv-0217</value>
    </filters>
    <label>List of Invoice Line Item</label>
</ListView>